--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ out/
 
 ### Kotlin ###
 .kotlin
+/.fastRequest/config/fastRequestCurrentProjectConfig.json
+/.fastRequest/config/fastRequestCurrentProjectEnvironment.json
